Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10099

QtConfig shows NoIcon instead of appicon.png

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 4.8.0
    • 4.6.2
    • Build System
    • None
    • 5692527f418163d21e5e2f4a4dc76c65c30150ee

    Description

      It seems the appicon.png image is not set by the mainwindow. See the attached image.

      Attachments

        1. missing-icon.patch
          0.7 kB
        2. Screenshot.png
          Screenshot.png
          72 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tmacieir Thiago Macieira (closed Nokia identity) (Inactive)
            mariocarrion Mario Carrion
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes