[qtconfig app] Add an app icon.

Thanks to Mario Carrion for the patch.

Task-number: QTBUG-10099
Reviewed-by: Thiago Macieira <thiago.macieira@nokia.com>